tests/ui/attributes/crate-type-delimited.stderr
error: malformed `crate_type` attribute input
  --> $DIR/crate-type-delimited.rs:2:1
   |
LL | #![crate_type(lib)]
   | ^^^^^^^^^^^^^^^^^^^ help: must be of the form: `#![crate_type = "bin|lib|..."]`

error: aborting due to 1 previous error

